# defmt-bbq

./: Cargo.toml  README.md  build.rs
examples/: README.md
examples/bbq-demo-print/: Cargo.toml  README.md
examples/bbq-demo-print/src/: main.rs
examples/nrf52840-usb-serial/: Cargo.toml  README.md
examples/nrf52840-usb-serial/src/: lib.rs  main.rs
src/: lib.rs
