[package]
authors = [
    "James Munns <james@onevariable.com>",
    "The Knurling-rs developers",
]
categories = ["embedded", "no-std"]
description = "A generic bbqueue based transport for defmt log messages"
edition = "2021"
keywords = [
    "knurling",
    "defmt",
    "defmt-transport"
]
license = "MIT OR Apache-2.0"
name = "defmt-bbq"
readme = "README.md"
repository = "https://github.com/jamesmunns/defmt-bbq"
version = "0.0.2"

[dependencies]
bbqueue = "0.5.0"
cortex-m = "0.7"
defmt = "0.3"

[features]
default = [
    # NOTE: It is *strongly* recommended to use the rzcobs encoding when
    # using this crate. If the buffer is ever filled, then the remaining
    # bytes will be discarded, which will corrupt the message stream.
    #
    # Because rzcobs is delimited by zero bytes, it is possible to recover
    # from this corruption, with the loss of a limited number of messages.
    # When using the "raw" encoding, you MUST ensure that the buffer is
    # never overfilled, as it will NOT be possible to recover from this
    # error condition.
    "defmt/encoding-rzcobs"
]
